<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skuhleesi.quizapp.QuizActivity">

    <LinearLayout
        android:id="@+id/quiz_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            android:textSize="24sp"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/questionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/question_one"/>

        <EditText
            android:id="@+id/question_one_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Fill in the blank"
            android:inputType="text"/>

        <TextView
            android:id="@+id/questionTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/question_two"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answer_true"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answer_false"/>

        </LinearLayout>

        <TextView
            android:id="@+id/questionThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/question_three"/>

        <RadioButton
            android:id="@+id/multipleChoice_answer_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_one"/>

        <RadioButton
            android:id="@+id/multipleChoice_answer_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_two"/>

        <RadioButton
            android:id="@+id/multipleChoice_answer_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_three"/>

        <TextView
            android:id="@+id/questionFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/questoin_four"/>

        <CheckBox
            android:id="@+id/questionFour_answerOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_one"
            />

        <CheckBox
            android:id="@+id/questionFour_answerTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_two"
            />

        <CheckBox
            android:id="@+id/questionFour_answerThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_three"
            />

        <CheckBox
            android:id="@+id/questionFour_answerFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_four"
            />

    </LinearLayout>

</ScrollView>
